test/analyze/type_check/tuple/anonymous_construction.exp
Error: Expected type `(Int, String, Bool)` but found `(Int, String)`
test/analyze/type_check/tuple/anonymous_construction.myte:8:30-40
 8 | val g3: (Int, String, Bool) = (1, "str")
   |                               ^^^^^^^^^^

Error: Expected type `(Int, String, Bool)` but found `(Int, String, Bool, Unit)`
test/analyze/type_check/tuple/anonymous_construction.myte:9:30-50
 9 | val g4: (Int, String, Bool) = (1, "str", true, ())
   |                               ^^^^^^^^^^^^^^^^^^^^

Error: Expected type `(Int, String)` but found `(String, Int)`
test/analyze/type_check/tuple/anonymous_construction.myte:12:24-34
 12 | val g5: (Int, String) = ("str", 1)
    |                         ^^^^^^^^^^

Error: Expected type `(Int, String, Int)` but found `(Int, Int, Int)`
test/analyze/type_check/tuple/anonymous_construction.myte:13:29-38
 13 | val g6: (Int, String, Int) = (1, 2, 3)
    |                              ^^^^^^^^^

Error: Expected type `(Int, (Int, String), Bool)` but found `(Int, (Int, Int), Bool)`
test/analyze/type_check/tuple/anonymous_construction.myte:14:37-54
 14 | val g7: (Int, (Int, String), Bool) = (1, (2, 3), true)
    |                                      ^^^^^^^^^^^^^^^^^

Error: Expected type `(Int, Int)` but found `String`
test/analyze/type_check/tuple/anonymous_construction.myte:15:21-26
 15 | val g8: (Int, Int) = "str"
    |                      ^^^^^